# SleepWellBaby

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: file_check.yml  linting.yml  unit_test.yml
data/processed/: trained_model.bz2.dvc
docs/: dataset_card.md  model_card.md
notebooks/: example.ipynb  shap_example.ipynb
output/models/: classifier.bz2  classifier.bz2.dvc  trained_support_obj.pkl  trained_support_obj.pkl.dvc
src/sleepwellbaby/: __init__.py  data.py  eligibility.py  explainability.py  model.py  pipeline.py  preprocess.py  utils.py
src/sleepwellbaby/dashboard/: app.py  data_structures.py
src/sleepwellbaby/templates/: example_payload.json
tests/: test_app.py  test_data.py  test_eligibility.py  test_model.py  test_modelfiles.py  test_pipeline.py  test_utils.py  test_version.py
